# copybuffer

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  cb.py  final_review_gate.py  instructions.txt  pyproject.toml  requirements.txt  summary.txt
.codex/: task
.codex/modes/: BRAINSTORM.md  CODER.md
.codex/notes/: BRAINSTORM_TEMPLATE.md
.codex/tasks/: 8b32df0a-wayland-clipboard-support.md
copybuffer/: __init__.py  core.py  main.py
tests/: test_discover_files.py  test_heredoc.py  test_images.py  test_wayland.py
